Fix side scroll if page content too wide

--- a/styles/main.css
+++ b/styles/main.css
@@ -318,6 +318,7 @@ pre {
     auto
     minmax(5rem, max-content);
   height: 100%;
+  overflow-x: hidden;
 }
 
 .header {
